# DataNameSorcery

./: .gitignore  CMakeLists.txt  Readme.md  build_cmake.sh  clean_cmake.sh  datanamesorcery.cpp  deps_list  makefile  one.one.one.one  shunit2.sh  shunit2_run.sh  test.sh  test_run.sh
input_sample/: dns  hosts
src/: DnsResolver.cpp  DnsResolver.h  command_line_parser.cpp  command_line_parser.h  input.cpp  input.h  main.cpp  output.cpp  output.h  uv_loop.cpp  uv_loop.h  xerces_manager.cpp  xerces_manager.h
src/datanamesorcery/: command_line_parser.h  dns_reverse.h  main.cpp  menu_generic.h  output.h  xerces_manager.h
src/shared/: DnsResolver.h  JSON_output.h  Readme.md  XMLoutput.h  XercesResourceManagement.h  argument_parser.h  command_line_parser.h  cout_man.h  dns_resolver.h  input.h  input_handler.h  man_cout.h  man_main.h  menu_generic.h  output.h  output_handler.h  output_xml.h  uv_loop.h  xerces_manager.h  xercesc_handler.h  xercesc_init.h
unit/: shunit2.sh  shunit2test.sh
